feat: add spring-boot-devtools and enhance rule logic in TestController