@@ -30,12 +30,19 @@ public class TestController {
     public String testDrools() {
         // 关键：为Drools规则中的全局变量"logger"注入实例
         kieSession.setGlobal("logger", logger);  // 变量名必须与规则中声明的一致
-        Person p1 = new Person("张华", 20, "girl"), p2 = new Person("Bob", 15, "boy"), p3 = new Person("God", 9999, "unknown");
-        List<Person> people = Arrays.asList(p1, p2, p3);
+        Person p1 = new Person("张华111", 20, "girl"), p2 = new Person("Bob", 158, "girl"), p3 = new Person("God", 9999, "girl");
+        Person p4 = new Person("linus", 88, "girl");
+        Person p5 = new Person("linus4", 889, "boy");
+        List<Person> people = Arrays.asList(p1, p2, p3, p4, p5);
+//        List<Person> people = List.of(p5);
         people.forEach(kieSession::insert);
         int firedRules = kieSession.fireAllRules(); // 执行所有规则
         log.info("fired rules: {}", firedRules);
+        log.info("fired rules: {}", firedRules);
+        // 销毁会话
         // kieSession.dispose();
-        return p1 + " | " + p2 + " | " + p3;
+//        return p1 + " | " + p2 + " | " + p3;
+        // return firedRules + " fired rules";
+        return "执行了 " + firedRules + " 条规则。\n结果:\n" + people;
     }
 }
